--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 body {
   font-family: 'Roboto', sans-serif;
   background: linear-gradient(255.37deg, #000000 14.38%, #262626 67.97%);
+  overflow-x: hidden;
 }
