--- a/src/styles/ourServices.scss
+++ b/src/styles/ourServices.scss
@@ -35,6 +35,7 @@
 				rgba(39, 102, 223, 0.8) 5.08%,
 				rgba(68, 66, 179, 0.8) 50.65%,
 				rgba(95, 39, 179, 0.8) 75.66%);
+		transition-duration: 1s;
 
 		span {
 			text-align: left;
@@ -56,6 +57,16 @@
 			font-size: 16px;
 			font-weight: 300;
 			line-height: 19px;
+		}
+
+		img {
+			transition-duration: 1s;
+		}
+
+		&:hover {
+			border-radius: 25px;
+			align-items: center;
+			transition-duration: 1s;
 		}
 	}
 }
