--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,29 +4,32 @@
 	background-repeat: no-repeat;
 	background-position: 150px -10px;
 	background-size: 1540px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 50px;
+	padding-block: 135px 35px;
+	padding-inline: 135px;
 
 	main {
 		color: #fff;
 		display: flex;
-		align-items: center;
-		padding: 135px;
+		justify-content: center;
 
 		.titles {
 			display: flex;
 			flex-direction: column;
-			width: 37vw;
 
 			h1 {
-				font-size: 5vw;
+				font-size: 4vw;
 				font-weight: 900;
 				text-align: left;
 			}
 
 			h6 {
-				font-size: 2vw;
+				font-size: 1.5vw;
 				font-weight: 100;
 				text-align: left;
-				width: 40vw;
 			}
 		}
 	}
@@ -35,23 +38,23 @@
 		display: flex;
 		justify-content: space-between;
 		color: #989898;
-		padding: 175px 100px 0px;
+		margin-top: -1000px;
 
 		p {
-			padding: 35px;
+			padding: 10px;
 			display: flex;
 			justify-content: center;
 			align-items: center;
 		}
 
 		p:nth-child(1) {
-			font-size: 2.5vw;
+			font-size: 1.25em;
 			font-weight: 600;
 			text-align: center;
 		}
 
 		p:nth-child(2) {
-			font-size: 2vw;
+			font-size: .85em;
 			font-weight: 300;
 			text-align: left;
 		}
@@ -59,18 +62,24 @@
 
 	.logo {
 		display: flex;
-		justify-content: flex-end;
-		padding: 55px;
+		justify-content: flex-end !important;
+		padding: 10px;
 	}
 }
 
 .navbar {
 	background: #00000050 !important;
-	color: #fff;
+	color: rgba(255, 255, 255, 0.700);
 
 	li {
-		font-size: 1.2vw;
+		font-size: .73rem;
 		font-weight: 400;
+
+		&:hover {
+			transform: translateY(-1px);
+			transition-duration: 1s;
+			color: #fff;
+		}
 	}
 
 	.offcanvas {
@@ -81,7 +90,6 @@
 
 .services-map {
 	display: flex;
-	justify-content: space-between;
 	gap: 10px;
 
 	.left {
@@ -92,8 +100,8 @@
 
 		div:nth-child(1) {
 			border-radius: 250px 25px 25px 25px;
-			height: 48vh;
-			width: 20vw;
+			height: 260px;
+			width: 260px;
 			background: linear-gradient(145.09deg,
 					rgba(100, 100, 100, 0.88) 30.16%,
 					rgba(100, 100, 100, 0.88) 50.04%,
@@ -103,8 +111,8 @@
 
 		div:nth-child(2) {
 			border-radius: 25px 25px 25px 250px;
-			height: 23vh;
-			width: 10vw;
+			height: 160px;
+			width: 145px;
 			background: linear-gradient(137.58deg,
 					#9b9999 11.38%,
 					rgba(130, 130, 130, 0.79) 50.04%,
@@ -114,28 +122,27 @@
 	}
 
 	.right {
-		position: relative;
 
 		div {
 			box-shadow: 9px 10px 40px 0px #00000066;
-			height: 73vh;
-			width: 20vw;
+			height: 430px;
+			width: 250px;
 			backdrop-filter: blur(10px);
 			border-radius: 25px 25px 250px 25px;
-			position: absolute;
+			position: relative;
 			padding: 20px;
 
 			span {
 				text-shadow: 1px 2px 4px 0px #00000040;
-				font-size: 1.7vw;
+				font-size: 2vw;
 				font-weight: 600;
 				text-align: left;
 			}
 
 			&:hover {
-				transform: translateX(-20.75vw);
+				transform: translateX(-240px);
 				transition-duration: 1s;
-				transform-origin: center left;
+				transform-origin: center top;
 				border-radius: 25px;
 			}
 		}
@@ -148,8 +155,8 @@
 		}
 
 		div:nth-child(2) {
-			top: 15vh;
-			right: -21vw;
+			top: -20%;
+			left: 15px;
 			background: linear-gradient(149.47deg,
 					rgba(184, 67, 118, 0.8) 5.08%,
 					rgba(162, 51, 125, 0.8) 50.65%,
@@ -157,8 +164,8 @@
 		}
 
 		div:nth-child(3) {
-			top: 30vh;
-			right: -22vw;
+			top: -40%;
+			left: 30px;
 			background: linear-gradient(149.47deg,
 					rgba(20, 170, 105, 0.8) 5.08%,
 					rgba(25, 145, 128, 0.8) 50.65%,
@@ -166,8 +173,8 @@
 		}
 
 		div:nth-child(4) {
-			top: 45vh;
-			right: -23vw;
+			top: -60%;
+			left: 45px;
 			background: linear-gradient(149.47deg,
 					rgba(39, 102, 223, 0.8) 5.08%,
 					rgba(68, 66, 179, 0.8) 50.65%,
@@ -197,7 +204,7 @@
 			justify-content: flex-start;
 
 			li {
-				font-size: 25px;
+				font-size: 1rem;
 				padding: 0 !important;
 				text-align: center;
 			}
@@ -205,12 +212,21 @@
 	}
 
 	.main-page {
+		background-position: 10px 100px;
+		background-size: 1000px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		gap: 50px;
+		padding: 75px;
+
 		main {
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
-			padding: 50px;
+			gap: 50px;
 
 			.titles {
 				width: auto;
@@ -227,45 +243,37 @@
 	.services-map {
 		.left {
 			div:nth-child(1) {
-				height: 15vh;
-				width: 20vw;
+				height: 135px;
+				width: 135px;
 			}
 
 			div:nth-child(2) {
-				height: 10vh;
-				width: 13vw;
+				height: 90px;
+				width: 70px;
 			}
 		}
 
 		.right {
 			div {
-				height: 33vh;
+				height: 270px;
+				width: 155px;
+
+				&:hover {
+					transform: translateX(-145px);
+				}
 			}
 
-			div:nth-child(2) {
-				top: 4vh;
-				right: -21vw;
-			}
-
-			div:nth-child(3) {
-				top: 8vh;
-				right: -22vw;
-			}
-
-			div:nth-child(4) {
-				top: 12vh;
-				right: -23vw;
-			}
 		}
 	}
 
 	footer {
 		display: flex;
 		flex-direction: column;
-		padding: 100px 20px 0px !important;
+		padding: 20px;
+		font-size: 2vw;
+		margin-top: -700px !important;
 
 		p {
-			padding: 10px !important;
 			text-align: center !important;
 		}
 	}
