--- a/src/styles/steps.scss
+++ b/src/styles/steps.scss
@@ -4,8 +4,8 @@
 	position: relative;
 
 	.middle-line {
-		height: 142px;
-		width: 1075px;
+		height: 150px;
+		width: 90%;
 		border-radius: 100px;
 		background: linear-gradient(149.47deg,
 				rgba(39, 102, 223, 0.9) 5.08%,
