--- a/src/styles/hiring.scss
+++ b/src/styles/hiring.scss
@@ -35,6 +35,7 @@
 			flex-direction: column;
 			align-items: center;
 			background: transparent;
+			margin-bottom: 30px;
 
 			&:hover {
 				transform: translateY(-20px);
