--- a/src/styles/why.scss
+++ b/src/styles/why.scss
@@ -41,6 +41,7 @@
 	padding: 25px;
 	box-shadow: 12px 11px 60px 0px #00000080;
 	background: linear-gradient(255.37deg, #000000 14.38%, #262626 67.97%);
+	margin: 5px;
 
 	img {
 		opacity: .25;
