--- a/src/styles/partners.scss
+++ b/src/styles/partners.scss
@@ -31,7 +31,7 @@
 		border-bottom: 3px solid rgba(184, 67, 118, 0.9);
 		padding: 50px;
 		height: 600px;
-		width: 1000px;
+		width: auto;
 		display: flex;
 		gap: 100px;
 		background: #58585830;
@@ -171,6 +171,38 @@
 			font-weight: 500;
 			line-height: 23px;
 			text-align: center;
+		}
+	}
+}
+
+@media screen and (max-width : 1200px) {
+	.partners {
+		.middle-line {
+			display: none;
+		}
+
+		.partners-container {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			gap: 25px;
+		}
+
+		.footer {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-evenly;
+			align-items: center;
+			height: auto;
+			width: auto;
+
+			.book,
+			.inputs {
+				display: flex;
+				flex-direction: column;
+				gap: 20px;
+				align-items: center;
+			}
 		}
 	}
 }
