--- a/src/styles/steps.scss
+++ b/src/styles/steps.scss
@@ -42,34 +42,40 @@
 
 .step {
 	width: 275px;
+	height: 350px;
 	border-radius: 50px;
 	overflow-x: hidden;
 	box-shadow: 8px 7px 40px 0px #00000026;
 	background: #fff;
 	z-index: 1;
+	backdrop-filter: blur(10px);
 
 	.header {
 		border-radius: 50px 50px 0 0;
 		box-shadow: 11px 15px 50px 0px #00000033;
-		&:nth-child(1){
-					background: linear-gradient(149.47deg,
-								rgba(184, 67, 118, 0.8) 5.08%,
-								rgba(162, 51, 125, 0.8) 50.65%,
-								rgba(137, 31, 127, 0.8) 75.66%);
-		}
-		&:nth-child(2){
-					background: linear-gradient(149.47deg,
-								rgba(20, 170, 105, 0.8) 5.08%,
-								rgba(25, 145, 128, 0.8) 50.65%,
-								rgba(33, 127, 149, 0.8) 75.66%);
-		}
-		&:nth-child(3){
-					background: linear-gradient(166.2deg,
-								rgba(51, 145, 255, 0.8) 5.77%,
-								rgba(62, 151, 255, 0.8) 44.34%,
-								rgba(32, 159, 231, 0.8) 86.27%);
-		}
 		height: 53px;
+
+		&:nth-child(1) {
+			background: linear-gradient(149.47deg,
+					rgba(184, 67, 118, 0.8) 5.08%,
+					rgba(162, 51, 125, 0.8) 50.65%,
+					rgba(137, 31, 127, 0.8) 75.66%);
+		}
+
+		&:nth-child(2) {
+			background: linear-gradient(149.47deg,
+					rgba(20, 170, 105, 0.8) 5.08%,
+					rgba(25, 145, 128, 0.8) 50.65%,
+					rgba(33, 127, 149, 0.8) 75.66%);
+		}
+
+		&:nth-child(3) {
+			background: linear-gradient(166.2deg,
+					rgba(51, 145, 255, 0.8) 5.77%,
+					rgba(62, 151, 255, 0.8) 44.34%,
+					rgba(32, 159, 231, 0.8) 86.27%);
+		}
+
 	}
 
 	.data {
@@ -105,4 +111,65 @@
 		text-align: center;
 	}
 
+}
+
+@media screen and (max-width : 1200px) {
+	.steps {
+		padding: 30px;
+
+		.middle-line {
+			display: none;
+		}
+	}
+
+	.step {
+		width: 200px;
+		z-index: 1;
+
+		.header {
+			border-radius: 50px 50px 0 0;
+			box-shadow: 11px 15px 50px 0px #00000033;
+			height: 50px;
+		}
+
+		.data {
+			display: flex;
+			justify-content: space-between;
+
+			.number {
+				font-size: 90px;
+				font-weight: 700;
+				display: flex;
+				justify-content: center;
+				text-align: center;
+				margin-inline-start: 40px;
+			}
+
+			.description {
+				font-size: 10px;
+				font-weight: 600;
+				padding: 10px 0;
+				display: none;
+			}
+
+			&:hover {
+				.number {
+					display: none;
+					transition-duration: .5s;
+				}
+
+				.description {
+					display: block;
+					padding: 10px;
+					transition-duration: .5s;
+				}
+			}
+		}
+
+		.title {
+			font-size: 14px;
+			font-weight: 400;
+			text-align: center;
+		}
+	}
 }
