adding icons to navbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -122,6 +122,7 @@
 	}
 
 	.right {
+		transition-timing-function: ease-in;
 
 		div {
 			box-shadow: 9px 10px 40px 0px #00000066;
@@ -143,7 +144,7 @@
 				transform: translateX(-240px);
 				transition-duration: 1s;
 				transform-origin: center top;
-				border-radius: 25px;
+				border-radius: 25px 25px 25px 250px;
 			}
 		}
 
@@ -190,6 +191,8 @@
 
 	.offcanvas.offcanvas-end {
 		background: linear-gradient(255.37deg, #000000 14.38%, #262626 67.97%);
+		min-width: fit-content;
+		max-width: fit-content;
 
 		.offcanvas-header {
 			display: flex;
@@ -281,4 +284,17 @@
 	.logo {
 		justify-content: center !important;
 	}
+}
+
+.navbar-toggler-icon {
+	background-image: url('../assets/icons/hamburger.svg') !important;
+}
+
+.navbar-toggler {
+	border: 0 !important;
+	outline: 0 !important;
+}
+
+.btn-close {
+	background-image: url('../assets/icons/close.svg') !important;
 }
