--- a/src/styles/ourServices.scss
+++ b/src/styles/ourServices.scss
@@ -46,10 +46,8 @@
 			font-size: 20px;
 			font-weight: 600;
 			line-height: 23px;
-		}
-
-		hr {
-			border: 1px solid #ffffff;
+			border-bottom: 1px solid #ffffff;
+			padding-bottom: 30px;
 		}
 
 		span:nth-child(2) {
@@ -58,14 +56,9 @@
 			line-height: 19px;
 		}
 
-		img {
-			transition-duration: 1s;
-		}
-
 		&:hover {
+			transform: scale(1.10, 1.10);
 			border-radius: 25px;
-			align-items: center;
-			transition-duration: 1s;
 		}
 	}
 }
