--- a/src/styles/experince.scss
+++ b/src/styles/experince.scss
@@ -4,6 +4,7 @@
 			rgba(162, 51, 125, 0.9) 50.65%,
 			rgba(137, 31, 127, 0.9) 75.66%);
 	padding: 40px 110px;
+		overflow-x: hidden;
 
 	hr {
 		border: 1px solid #FFFFFF
