--- a/src/styles/faq.scss
+++ b/src/styles/faq.scss
@@ -1,5 +1,6 @@
 .faq {
 	background: #fff;
+	overflow-x: hidden;
 
 	h1 {
 		font-size: 24px;
@@ -56,4 +57,16 @@
 
 .accordion-item .accordion-button.collapsed {
 	border-radius: 40px !important;
+}
+
+@media only screen and (max-width : 1200px) {
+	.faq {
+		h1 {
+			padding: 30px 10px 10px;
+		}
+
+		main {
+			padding: 10px 10px 30px;
+		}
+	}
 }
