--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,9 +1,10 @@
 .footer-section {
-	background: #3E3E3E;
+	background: #3e3e3e;
 	padding: 120px;
 	display: flex;
 	flex-direction: column;
 	gap: 50px;
+	overflow-x: hidden;
 
 	ul {
 		margin: 0;
@@ -20,7 +21,7 @@
 
 		&:hover {
 			font-weight: 900;
-			transition-duration: .3s;
+			transition-duration: 0.3s;
 		}
 	}
 
@@ -35,5 +36,11 @@
 	.section-data {
 		display: flex;
 		justify-content: space-between;
+	}
+}
+
+@media only screen and (max-width: 1200px) {
+	.footer-section {
+		padding: 40px;
 	}
 }
