--- a/src/styles/hiring.scss
+++ b/src/styles/hiring.scss
@@ -9,6 +9,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 50px;
+	overflow-x: hidden;
 
 	h1 {
 		font-size: 24px;
@@ -20,9 +21,8 @@
 
 	main {
 		display: flex;
-		justify-content: center;
 		flex-flow: row wrap;
-		justify-content: space-between;
+		justify-content: space-evenly;
 
 		.data-holder {
 			height: 260px;
@@ -67,7 +67,23 @@
 		font-size: 16px;
 		font-weight: 500;
 		line-height: 19px;
-		text-align: left;
 		color: rgba(255, 255, 255, 0.5);
+	}
+}
+
+@media only screen and (max-width : 1200px) {
+	.hiring {
+		padding: 30px;
+		gap: 30px;
+
+		main {
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+		}
+
+		p {
+			text-align: center;
+		}
 	}
 }
