--- a/src/styles/partners.scss
+++ b/src/styles/partners.scss
@@ -6,6 +6,7 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 50px;
+	overflow-x: hidden;
 
 	.middle-line {
 		height: 150px;
@@ -177,6 +178,8 @@
 
 @media screen and (max-width : 1200px) {
 	.partners {
+		padding: 30px;
+
 		.middle-line {
 			display: none;
 		}
@@ -194,7 +197,8 @@
 			justify-content: space-evenly;
 			align-items: center;
 			height: auto;
-			width: auto;
+			width: 90%;
+			padding: 30px;
 
 			.book,
 			.inputs {
@@ -202,6 +206,12 @@
 				flex-direction: column;
 				gap: 20px;
 				align-items: center;
+				height: auto;
+				width: 100%;
+			}
+
+			textarea {
+				width: 100%;
 			}
 		}
 	}
