--- a/src/styles/steps.scss
+++ b/src/styles/steps.scss
@@ -2,6 +2,7 @@
 	padding: 90px;
 	background: #ffffff;
 	position: relative;
+	overflow-x: hidden;
 
 	.middle-line {
 		height: 150px;
@@ -142,7 +143,7 @@
 				display: flex;
 				justify-content: center;
 				text-align: center;
-				margin-inline-start: 40px;
+				margin-inline-start: 15px;
 			}
 
 			.description {
