--- a/src/styles/Ads.scss
+++ b/src/styles/Ads.scss
@@ -20,7 +20,6 @@
 
 		span {
 			color: #FFFFFF;
-			text-align: left;
 		}
 
 		span:nth-child(1) {
@@ -58,6 +57,10 @@
 			align-items: center;
 			justify-content: center;
 			flex-direction: column;
+		}
+
+		span {
+			text-align: center;
 		}
 	}
 }
