--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 	padding-block: 135px 35px;
 	padding-inline: 100px;
 	overflow-x: hidden;
+	overflow-y: hidden;
 
 	main {
 		color: #fff;
@@ -272,7 +273,7 @@
 		footer {
 			display: flex;
 			flex-direction: column;
-			margin-top: -650px !important;
+			margin-top: -575px !important;
 
 			p:nth-child(1) {
 				font-size: small !important;
