--- a/src/styles/partners.scss
+++ b/src/styles/partners.scss
@@ -19,12 +19,15 @@
 		box-shadow: 10px 10px 20px 0px #00000033;
 		position: absolute;
 		top: 20%;
+		z-index: 1;
 	}
 
 	.partners-container {
 		display: flex;
 		justify-content: center;
 		gap: 25px;
+		z-index: 2;
+		backdrop-filter: blur(10px);
 	}
 
 	.footer {
@@ -117,7 +120,6 @@
 	justify-content: space-evenly;
 	align-items: center;
 	padding: 25px;
-	backdrop-filter: blur(10px);
 
 	.main-icon {
 		display: flex;
